added the meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sadza.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mai-titi</title>
+    <meta name="description" content="Mai Titi's kitchen  serves african food meals at cape town airpot close to Hotel Verde in uber parking its always a take away visit us today including sadza and rice with beef braai and stew chicken and fish ">
+    <meta property="og:title" content="Mai Titi's kitchen authentic food in cape town">
+    <meta property="og:description" content="Try our fresh African dishes including sadza and rice ">
+    <title>mai-titi's kitchen|African food in cape town | sadza and rice with beef,chicken,fish and veggies</title>
   </head>
   <body>
     <div id="root"></div>
